# vigil-agent

./: .gitignore  Cargo.toml  README.md  agent.toml
.github/workflows/: benchmark.yml  ci.yml
benches/: perf.rs
scripts/: benchmark_compare.py
src/: agent.rs  config.rs  lib.rs  main.rs
src/collector/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/ipc/: mod.rs
src/risk/: baseline.rs  mod.rs  scorer.rs  types.rs
src/storage/: mod.rs
src/telemetry/: mod.rs
