[package]
name = "vigil-agent"
version = "0.1.0"
edition = "2021"
description = "Cross-platform desktop agent for continuous application usage risk scoring"
license = "MIT"

[[bin]]
name = "vigil-agent"
path = "src/main.rs"

[lib]
name = "vigil_agent"
path = "src/lib.rs"

[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
uuid           = { version = "1", features = ["v4"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml           = "0.8"
reqwest        = { version = "0.12", features = ["rustls-tls", "json"] }
ring           = "0.17"
redb           = "2"
chrono         = { version = "0.4", features = ["serde"] }
anyhow         = "1"
thiserror      = "1"
interprocess   = { version = "2", features = ["tokio"] }
dashmap        = "6"
async-trait    = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
x11rb  = { version = "0.13", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = []
x11 = ["x11rb"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "perf"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
